# zeroak

./: CMakeLists.txt  howto
apputil/: eventball.h  eventballglut.cpp  eventballglut.h  signals.h
gui/: CMakeLists.txt  dispview.cpp  dispview.h  editviewobj.h  eventhnd.cpp  eventhnd.h  frmMainDisplay.cpp  frmMainDisplayUI.fl  frmPrjTree.cpp  frmPrjTree.h  frmStereoShape.cpp  frmStereoShape.h  frmStereoShapeUI.fl  glhelper.cpp  glhelper.h  lights.cpp  mainini.cpp  mathstruct.cpp  mousectrl.cpp  mousectrl.h  savejpeg.cpp  stereoreg.cpp  stereoreg.h  stereoshape.cpp  stereoshape.h  t1.psr
mathlib/lapackcpp/: lapackcpp.h
mathlib/mathutl/: mymath.h
